# bpho-computational-challenge

./: CNAME  Cargo.toml  README.md  bpho-computational-challenge-35400f56b0dfa0d2.js  bpho-computational-challenge-35400f56b0dfa0d2_bg.wasm  bpho-computational-challenge-f71442c301b7dca1.js  bpho-computational-challenge-f71442c301b7dca1_bg.wasm  index.html  index.js
.github/workflows/: deploy.yml
src/: angles.rs  anim2d.rs  anim3d.rs  centre.rs  kepler.rs  lib.rs  main.rs  orbits.rs  spiral.rs
