[package]
name = "bpho-computational-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "point_series", "full_palette"] }
egui-plotter = { git = "https://github.com/Gip-Gip/egui-plotter", rev = "a6326a3"}
eframe = "0.22"
instant = { version = "0.1", features = ["wasm-bindgen"]}

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4"