[package]
name = "bpho-computational-challenge"
version = "1.0.0"
authors = ["spuds"]
repository = "https://github.com/bananaturtlesandwich/bpho-computational-challenge"
edition = "2021"

[dependencies]
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "line_series", "point_series", "full_palette"] }
egui-plotter = { git = "https://github.com/Gip-Gip/egui-plotter", rev = "2a4b060" }
eframe = "0.22"
instant = { version = "0.1", features = ["wasm-bindgen"]}

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4"